--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Gipsolit</title>
 
         <!-- Style CSS -->
-        <link href="css/style.css" rel="stylesheet">
+        <link href="less/style.css" rel="stylesheet">
         <!-- Animate CSS -->
         <link rel="stylesheet" href="css/animate.css">
         <!-- Bootstrap CSS -->
